<resources>
    <string name="app_name">Banco de Sangue</string>
    <string name="title_home">Início</string>
    <string name="title_dashboard">Painel</string>
    <string name="title_notifications">Avisos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_cad_paciente">Cad. Paciente</string>
    <string name="nome_paciente">Nome Paciente</string>
    <string name="viniciusdemoraes">ViniciusdeMoraes</string>
    <string name="data_de_nascimento">Data de Nascimento</string>
    <string name="Sexo" />
    <string name="_24_10_1997">24/10/1997</string>
    <string name="sexo">Sexo</string>
    <string name="masculino">Masculino</string>
    <string name="feminino">Feminino</string>
    <string name="j_doou_sangue_antes">É já doou sangue antes?</string>
    <string name="ja_doou_sangue_antes">Ja doou sangue antes?</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="quando_foi_a_ultima_doacao">Quando foi a ultima doacao?</string>
    <string name="_01_02_2025">01/02/2025</string>
    <string name="qual_seu_tipo_sanguineo">Qual seu tipo sanguineo?</string>
    <string-array name="opcoes_tipos_sanguineo">
        <item>Selecione</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>Não sei</item>
    </string-array>
    <string name="cadastrar">Cadastrar</string>
    <string name="title_con_paciente">Con. Paciente</string>

</resources>