<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.paciente.CadPacienteFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nome_paciente"
                tools:ignore="DuplicateIds" />

            <EditText
                android:id="@+id/etnome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="ViniciusdeMoraes"
                android:ems="10"
                android:hint="@string/viniciusdemoraes"
                android:inputType="text"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/data_de_nascimento" />

            <EditText
                android:id="@+id/etdatadenascimento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="24/10/1997"
                android:ems="10"
                android:hint="@string/_24_10_1997"
                android:minHeight="48dp"
                android:inputType="date" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sexo" />

            <RadioGroup
                android:id="@+id/rgSexo"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                        <RadioButton
                            android:id="@+id/radioButtonMAsc"
                            android:layout_width="114dp"
                            android:layout_height="wrap_content"
                            android:text="@string/masculino" />

                        <RadioButton
                            android:id="@+id/radioButtonFem"
                            android:layout_width="124dp"
                            android:layout_height="wrap_content"
                            android:text="@string/feminino" />
                    </TableRow>
                </TableLayout>
            </RadioGroup>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ja_doou_sangue_antes" />

            <RadioGroup
                android:id="@+id/rgjadoou"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                        <RadioButton
                            android:id="@+id/radioButtonsim"
                            android:layout_width="114dp"
                            android:layout_height="wrap_content"
                            android:text="@string/sim" />

                        <RadioButton
                            android:id="@+id/radioButtonnao"
                            android:layout_width="124dp"
                            android:layout_height="wrap_content"
                            android:text="@string/nao" />
                    </TableRow>
                </TableLayout>
            </RadioGroup>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quando_foi_a_ultima_doacao" />

            <EditText
                android:id="@+id/etDoacaoData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="01/02/2025"
                android:ems="10"
                android:hint="@string/_01_02_2025"
                android:minHeight="48dp"
                android:inputType="date" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/qual_seu_tipo_sanguineo" />

            <Spinner
                android:id="@+id/sptipos_sanguineo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:entries="@array/opcoes_tipo_sanguineo" />

            <Button
                android:id="@+id/btsalvar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/cadastrar" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>