<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="br.com.kathleenconsoli.bancodesangue.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="br.com.kathleenconsoli.bancodesangue.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="br.com.kathleenconsoli.bancodesangue.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_cad_paciente"
        android:name="br.com.kathleenconsoli.bancodesangue.ui.paciente.CadPacienteFragment"
        android:label="@string/title_cad_paciente"
        tools:layout="@layout/fragment_cad_paciente" />
    <fragment
        android:id="@+id/navigation_con_paciente"
        android:name="br.com.kathleenconsoli.bancodesangue.ui.paciente.ConPacienteFragment"
        android:label="@string/title_con_paciente"
        tools:layout="@layout/fragment_con_paciente_list" />
</navigation>